# solidpython-reloader

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
spreloader/: __init__.py  command_line.py  spreloader.py
