[metadata]
name = solidpython_reloader
author = Mattes Sarcander
description = Automatically reload solidpython file on change.
version = 0.1.3
url = https://github.com/Fortschritt/solidpython-reloader
keywords = solidpython
classifiers = 
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5